syntax = "proto3";

import "intdemo/intdemo_models.proto";

package io.iohk.atala.prism.intdemo.protos;

// This service simulates an application run by a government body who use io.iohk.atala's connector.
service IDService {
    rpc GetConnectionToken (GetConnectionTokenRequest) returns (GetConnectionTokenResponse) {}
    rpc GetSubjectStatus (GetSubjectStatusRequest) returns (GetSubjectStatusResponse) {}
    rpc GetSubjectStatusStream (GetSubjectStatusRequest) returns (stream GetSubjectStatusResponse) {}
    rpc SetPersonalData (SetPersonalDataRequest) returns (SetPersonalDataResponse) {}
}

// This service simulates an application run by a university who use io.iohk.atala's connector.
service DegreeService {
    rpc GetConnectionToken (GetConnectionTokenRequest) returns (GetConnectionTokenResponse) {}
    rpc GetSubjectStatus (GetSubjectStatusRequest) returns (GetSubjectStatusResponse) {}
    rpc GetSubjectStatusStream (GetSubjectStatusRequest) returns (stream GetSubjectStatusResponse) {}
}

// ... a company's application
service EmploymentService {
    rpc GetConnectionToken (GetConnectionTokenRequest) returns (GetConnectionTokenResponse) {}
    rpc GetSubjectStatus (GetSubjectStatusRequest) returns (GetSubjectStatusResponse) {}
    rpc GetSubjectStatusStream (GetSubjectStatusRequest) returns (stream GetSubjectStatusResponse) {}
}

// ... another company's application
service InsuranceService {
    rpc GetConnectionToken (GetConnectionTokenRequest) returns (GetConnectionTokenResponse);
    rpc GetSubjectStatus (GetSubjectStatusRequest) returns (GetSubjectStatusResponse) {}
    rpc GetSubjectStatusStream (GetSubjectStatusRequest) returns (stream GetSubjectStatusResponse) {}
}

message GetSubjectStatusRequest {
    string connection_token = 1;
}

message GetSubjectStatusResponse {
    SubjectStatus subject_status = 1;
}

message GetConnectionTokenRequest {
}

message GetConnectionTokenResponse {
    string connection_token = 1;
}

message SetPersonalDataRequest {
    string connection_token = 1;
    string first_name = 2;
    Date date_of_birth = 3;
}

message SetPersonalDataResponse {}
